# paintwars

./: .env.example  .gitmodules  README.md  compose.yml
app/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  providers.tsx  types.ts  utils.ts  wagmi.ts
app/src/abis/: MintableToken.json  PixelStaking.json  PixelStakingOApp.json
app/src/api/: server.ts
app/src/pages/: Home.scss  (+1 more)
backend/: .gitignore  main.py  pyproject.toml  start.sh
backend/migrations/: env.py
backend/migrations/versions/: eef726edd7b6_init.py
backend/src/: utils.py
backend/src/ai/placement/: init.py  placement_actions.py
backend/src/api/: __init__.py  deps.py
backend/src/api/paintwars/: __init__.py  pixel_events.py  pixels.py
backend/src/contracts/: pixel_listeners.py  project_factory_listeners.py  provider.py
backend/src/contracts/abis/: MintableToken.json  PixelStaking.json
backend/src/core/: config.py
backend/src/models/base/: base_crud.py  base_model.py
backend/src/models/key_value/: key_value_schema.py
backend/src/models/paintwars/: __init__.py
backend/src/models/paintwars/pixel/: pixel_model.py  pixel_schema.py
backend/src/models/paintwars/pixel_event/: pixel_event_crud.py  pixel_event_model.py  pixel_event_schema.py
contracts/: Makefile  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MintableToken.sol  PixelStaking.sol  PixelStakingOApp.sol  PixelStakingOFT.sol
frontend/: .gitignore  biome.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: types.ts  utils.ts
(+55 files in other folders)
