[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Raouf", email = "raouf.hec@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.14",
    "starlette>=0.46.2",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "web3>=7.12.0",
    "numpy>=2.3.1",
    "alembic>=1.16.2",
    "psycopg2-binary>=2.9.10",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
